--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="links">
                 <a href="#about">About Us</a>
                 <a href="#clientele">Clientele</a>
-                <a href="mailto:cohencoombs@outlook.com">Contact Us</a>
+                <a href="#contact">Contact Us</a>
             </div>
         </nav>
 
@@ -41,7 +41,7 @@
         <section>
             <p style="font-size: 1.5rem; max-width: 800px;" class="about">
                 Unlock your online potential with our exceptional website design and development
-                services. Bespoke Web Dev have worked with a diverse range of clientele, to create
+                services. <span class="brand">Bespoke Web Dev</span> have worked with a diverse range of clientele, to create
                 professional modern websites customised to your needs, on a local and international
                 scale.
             </p>
@@ -125,12 +125,11 @@
                             cloud_done
                         </span>
 
-                        <h3>Website Hosting is on us!</h3>
+                        <h3>Website Hosting & SSL is on us!</h3>
                     </div>
                     <p>
-                        We provide complimentary website hosting for all of our clients, so you
-                        don't have to worry about the hassle of finding a hosting provider. All we
-                        need from you is your domain name, and we'll take care of the rest.
+                        We provide complimentary website hosting & SSL certificates for all of our clients, so you
+                        don't have to. All we need from you is your domain name, and we'll take care of the rest.
                     </p>
                 </div>
             </div>
@@ -159,7 +158,7 @@
             </p>
         </section>
 
-        <section style="background: hsl(0, 0%, 8%);">
+        <section id="contact" style="background: hsl(0, 0%, 8%);">
             <h2 style="font-weight: 600; font-size: 3rem;" class="title">
                 Contact Us; Get a Quote
             </h2>
@@ -167,16 +166,16 @@
                 Get in touch with us today to discuss your next website project.
                 <form id="contactform" action="https://formsubmit.io/send/cohencoombs@outlook.com" method="POST">
                     <span class="material-symbols-rounded">chat</span>
-                    <input name="_redirect" type="hidden" id="name" value="http://localhost:5500/clients/?success=true">
+                    <input name="_redirect" type="hidden" id="name" value="https://bespokewebdev.com/?success=true">
                     <input hidden name="e58fd2da-3765-4350-ba68-716b57987233" type="text">
                 
-                    <input placeholder="Full Name" name="name" type="text" id="name">
-                    <input placeholder="Email" name="email" type="email" id="email">
+                    <input required placeholder="Full Name" name="name" type="text" id="name">
+                    <input required placeholder="Email" name="email" type="email" id="email">
                     <input placeholder="Phone" name="phone" type="phone" id="phone">
-                    <textarea placeholder="Write your message..." name="comment" id="comment" rows="3"></textarea>
+                    <textarea required placeholder="Write your message..." name="comment" id="comment" rows="3"></textarea>
         
                     <button type="submit">Send Inquiry</button>
-                    <p style="margin-top: 10px; text-align: center; color: #999;">or contact us directly at <a href="mailto:cohencoombs@outlook.com">cohencoombs@outlook.com</a></p>
+                    <p style="margin: 10px 0; text-align: center; color: #999;">or contact us directly at <a href="mailto:cohencoombs@outlook.com">cohencoombs@outlook.com</a></p>
                 </form>
             </p>
         </section>
