--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Bespoke Web Design & Development</title>
+        <title>Bespoke Web Design & Development Adelaide</title>
         <meta name="author" content="Cohen Coombs" />
-        <link rel="stylesheet" href="style.css" />
+        <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
+        <link rel="stylesheet" href="assets/style.css" />
         <meta
             name="description"
-            content="Unlock your online potential with our exceptional website design and development services. Bespoke Web Dev have worked with a diverse range of clientele, to create professional modern websites customised to your needs, on a local and international scale."
+            content="Unlock your online potential with our exceptional website design and development services. Bespoke Web Dev have worked with a diverse range of clientele, creating tailored, professional & modern websites, on a local and international scale."
         />
         <meta
             name="keywords"
@@ -20,10 +21,29 @@
             defer
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,500,0,0"
         />
+        <meta property="og:title" content="Bespoke Web Design & Development Adelaide" />
+        <meta property="og:type" content="website" />
+        <meta property="og:url" content="https://bespokewebdev.com/" />
+        <meta property="og:image" content="https://bespokewebdev.com/assets/banner.png" />
+        <meta
+            property="og:description"
+            content="Unlock your online potential with our exceptional website design and development services. Bespoke Web Dev have worked with a diverse range of clientele, creating tailored, professional & modern websites, on a local and international scale."
+        />
+        <meta property="og:site_name" content="Bespoke Web Dev" />
+        <meta property="og:locale" content="en_AU" />
+        <meta property="og:article:author" content="Besoke Web Dev" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:title" content="Bespoke Web Design & Development Adelaide" />
+        <meta
+            name="twitter:description"
+            content="Unlock your online potential with our exceptional website design and development services. Bespoke Web Dev have worked with a diverse range of clientele, creating tailored, professional & modern websites, on a local and international scale."
+        />
+        <meta name="twitter:image" content="https://bespokewebdev.com/assets/banner.png" />
     </head>
     <body>
         <nav>
-            <a href="#">
+            <a style="gap: 2rem;" href="#">
+                <img class="logo" src="assets/logo.png" alt="Logo" />
                 <h1 class="brand">Bespoke Web Dev</h1>
             </a>
             <div class="links">
@@ -35,15 +55,22 @@
 
         <header>
             <canvas id="showcase"></canvas>
-            <h1>Bespoke, Professional Website Design & Development</h1>
+            <h1>
+                Bespoke <br />
+                <span class="truncate-title">Professional</span> Website Design & Development
+            </h1>
         </header>
 
         <section>
             <p style="font-size: 1.5rem; max-width: 800px;" class="about">
                 Unlock your online potential with our exceptional website design and development
-                services. <span class="brand">Bespoke Web Dev</span> have worked with a diverse range of clientele, to create
-                professional modern websites customised to your needs, on a local and international
-                scale.
+                services. <span class="brand">Bespoke Web Dev</span> have worked with a diverse
+                range of clientele, creating tailored, professional & modern websites, on a local
+                and international scale. <br /><br />
+                <a class="link" style="font-size: 1.2rem;" href="pages/services.html">
+                    <span class="material-symbols-rounded">arrow_forward</span>
+                    Learn More in Services</a
+                >
             </p>
         </section>
 
@@ -61,7 +88,9 @@
                     </div>
                     <p>
                         All websites are hand-coded from scratch, offering a
-                        <a style="text-decoration: underline;" href="">range of benefits.</a>
+                        <a style="font-weight: 600;" href="pages/benefits.html"
+                            >range of benefits - click to learn more.</a
+                        >
                         We strive to deliver modern, high-quality and reliable websites that help
                         our clients achieve their objectives.
                     </p>
@@ -88,8 +117,7 @@
                     </div>
                     <p>
                         We offer not only robust & scalable solutions, but also ensure that your
-                        website is optimised for performance and reliability, allowing your visitors
-                        to load your website quickly and reliably.
+                        website is optimised for fast performance and reliability.
                     </p>
                 </div>
                 <div class="card">
@@ -100,9 +128,8 @@
                         <h3>Responsive Design & Mobile Friendly</h3>
                     </div>
                     <p>
-                        With the majority of web traffic coming from mobile devices, it is important
-                        that your website is mobile friendly and responsive. We ensure that your
-                        website is responsive and compatible with all screen devices.
+                        With the majority of web traffic coming from mobile devices, we ensure that
+                        your website is mobile friendly and responsive for all screen devices.
                     </p>
                 </div>
                 <div class="card">
@@ -114,9 +141,9 @@
                         <h3>Dedicated Support & Maintenance</h3>
                     </div>
                     <p>
-                        We are dedicated to providing our clients with exceptional support and
-                        maintenance whenever possible. As part of this, we provide complimentary
-                        support and maintenance to keep your website running smoothly.
+                        We are dedicated to providing our clients with exceptional complimentary
+                        support and maintenance whenever possible, ensuring your website remains
+                        fully operational.
                     </p>
                 </div>
                 <div class="card">
@@ -128,8 +155,9 @@
                         <h3>Website Hosting & SSL is on us!</h3>
                     </div>
                     <p>
-                        We provide complimentary website hosting & SSL certificates for all of our clients, so you
-                        don't have to. All we need from you is your domain name, and we'll take care of the rest.
+                        You don't have to worry about the technicalities of hosting your website.
+                        All we require is your domain name, and we'll provide complimentary website
+                        hosting & SSL certificates.
                     </p>
                 </div>
             </div>
@@ -146,38 +174,163 @@
         </section>
 
         <section>
-            <h2 class="title">
-                Our emphasis on <span class="brand">hand-crafted</span> websites...
-            </h2>
+            <h2 class="title">Our emphasis on <span class="brand">hand-coded</span> websites...</h2>
             <p style="max-width: 800px;" class="about">
-                We believe that hand-crafted websites are superior to websites created with
+                We believe that hand-coded websites are superior to websites created with
                 third-party site builders. We hand-code all of our websites from scratch, allowing
                 us to create websites that are more reliable, secure, and performant. We also have
                 more control over the design and functionality of the website, allowing us to create
                 websites that are more unique and customised to your needs.
+                <br /><br />
+                <a class="link" href="pages/benefits.html">
+                    <span class="material-symbols-rounded">arrow_forward</span>
+                    Read More on Benefits</a
+                >
             </p>
         </section>
 
+        <section style="max-width: 1400px; margin: 0 auto;">
+            <h2 class="title">Scaled to perfection for <span class="brand">all devices</span></h2>
+            <div class="mock-container">
+                <div class="switch">
+                    <div>
+                        <p>Click to change device type</p>
+                        <div class="radio-inputs">
+                            <label onclick="updateMockup(false)" class="radio">
+                                <input type="radio" name="radio" />
+                                <span class="name">Mobile</span>
+                            </label>
+                            <label onclick="updateMockup(true)" class="radio">
+                                <input type="radio" name="radio" checked="" />
+                                <span class="name">Computer</span>
+                            </label>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="preview">
+                    <img
+                        src="assets/mock-mac.png"
+                        style="display: block;"
+                        class="mock-mac"
+                        alt=""
+                    />
+                    <img
+                        src="assets/mock-phone.png"
+                        style="display: none;"
+                        class="mock-phone"
+                        alt=""
+                    />
+                </div>
+            </div>
+        </section>
+
+        <section style="padding-top: 2rem; padding-bottom: 8rem;">
+            <h2 class="title separator">The quality speaks for itself, and so do our clients.</h2>
+            <br />
+            <div class="quotes">
+                <div>
+                    <q>Looks Great!</q>
+                    <p>–– Cleo's Candles</p>
+                    <a target="_blank" href="https://cleoscandles.com">cleoscandles.com</a>
+                </div>
+                <div>
+                    <q>I am at a lost for the words.</q>
+                    <p>–– Drain Doctor LLC, repeat client</p>
+                    <a target="_blank" href="https://www.calldraindoctor.com"
+                        >www.calldraindoctor.com</a
+                    >
+                </div>
+            </div>
+        </section>
+
         <section id="contact" style="background: hsl(0, 0%, 8%);">
-            <h2 style="font-weight: 600; font-size: 3rem;" class="title">
-                Contact Us; Get a Quote
+            <h2 style="font-weight: 600; font-size: 2.5rem;" class="title">
+                Contact Us <span style="font-weight: 100; color: #555;">/</span> Get a Quote
             </h2>
             <p style="line-height: normal;" class="about">
                 Get in touch with us today to discuss your next website project.
-                <form id="contactform" action="https://formsubmit.io/send/cohencoombs@outlook.com" method="POST">
-                    <span class="material-symbols-rounded">chat</span>
-                    <input name="_redirect" type="hidden" id="name" value="https://bespokewebdev.com/?success=true">
-                    <input hidden name="e58fd2da-3765-4350-ba68-716b57987233" type="text">
-                
-                    <input required placeholder="Full Name" name="name" type="text" id="name">
-                    <input required placeholder="Email" name="email" type="email" id="email">
-                    <input placeholder="Phone" name="phone" type="phone" id="phone">
-                    <textarea required placeholder="Write your message..." name="comment" id="comment" rows="3"></textarea>
-        
-                    <button type="submit">Send Inquiry</button>
-                    <p style="margin: 10px 0; text-align: center; color: #999;">or contact us directly at <a href="mailto:cohencoombs@outlook.com">cohencoombs@outlook.com</a></p>
-                </form>
             </p>
+            <form
+                action="https://formsubmit.co/cohencoombs@outlook.com"
+                onsubmit="refEmail()"
+                method="POST"
+            >
+                <span class="material-symbols-rounded">chat</span>
+                <input type="hidden" name="_subject" value="Business Inquiry" />
+                <input type="hidden" name="_captcha" value="false" />
+                <input type="hidden" name="_template" value="table" />
+                <input
+                    type="hidden"
+                    name="_next"
+                    value="https://bespokewebdev.com/pages/thanks.html"
+                />
+
+                <input id="contact-name" type="name" name="name" required placeholder="Full Name" />
+                <input id="contact-email" type="email" name="email" required placeholder="Email" />
+                <input id="contact-phone" type="phone" name="phone" placeholder="Phone" />
+
+                <input id="contact-category" type="hidden" name="category" value="Landing Page" />
+                <label for="category">What website best fits your inquiry?</label>
+                <select id="category" name="category">
+                    <option value="Landing Page">Landing Page</option>
+                    <option value="Portfolio Page">Portfolio</option>
+                    <option value="Blog/Customer interaction">Blog/Customer interaction</option>
+                    <option value="Event Booking">Event Booking</option>
+                    <option value="E-Commerce Website">E-Commerce (Online Business)</option>
+                    <option value="Business Website">Business</option>
+                    <option value="Info & Services">Information and/or service</option>
+                    <option value="Health, Wellbeing & Fitness">Health, Wellbeing & Fitness</option>
+                    <option value="Catalog/Brochure Website">Catalog/Brochure Website</option>
+                    <option value="Personal">Personal</option>
+                    <option value="Nonprofit/Charity">Nonprofit/Charity</option>
+                    <option value="Education/Online Learning">Education/Online Learning</option>
+                    <option value="Social Network/Community">Social Network/Community</option>
+                    <option value="Real Estate">Real Estate</option>
+                    <option value="Travel and Tourism">Travel and Tourism</option>
+                    <option value="Government Organization">Government Organization</option>
+                    <option value="Restaurant/Food Services">Restaurant/Food Services</option>
+                    <option value="Art/Creative Portfolio">Art/Creative Portfolio</option>
+                    <option value="News/Media">News/Media</option>
+                    <option value="Personal Branding">Personal Branding</option>
+                    <option value="Other (please explain below)"
+                        >Other (please explain below)</option
+                    >
+                </select>
+
+                <input id="contact-pages" type="hidden" name="proposed-pages" value="1" />
+                <label for="proposed-pages">Proposed number of pages</label>
+                <select id="proposed-pages" name="proposed-pages">
+                    <option value="1">1</option>
+                    <option value="1-5">1-5</option>
+                    <option value="5-10">5-10</option>
+                    <option value="10-20">10-20</option>
+                    <option value="20-30">20-30</option>
+                    <option value="30+">30+</option>
+                </select>
+
+                <label for="proposed-budget">What is your budget?</label>
+                <input
+                    id="contact-budget"
+                    placeholder="AUD $"
+                    name="proposed-budget"
+                    value="AUD $"
+                />
+
+                <textarea
+                    required
+                    placeholder="Write your message..."
+                    name="comment"
+                    id="comment"
+                    rows="3"
+                ></textarea>
+
+                <button type="submit">Send Inquiry</button>
+                <p style="margin: 10px 0; text-align: center; color: #999;">
+                    or contact us directly at
+                    <a href="mailto:cohencoombs@outlook.com">cohencoombs@outlook.com</a>
+                </p>
+            </form>
         </section>
 
         <footer>
@@ -193,19 +346,35 @@
                 </a>
                 <hr />
                 <div class="links">
-                    <a href="">Our Services</a>
-                    <a href="">FAQ</a>
-                    <a href="">Terms of Service</a>
-                    <a href="">Privacy Policy</a>
-                    <a href="">Disclaimer</a>
+                    <a href="pages/services.html">Our Services</a>
+                    <a href="pages/benefits.html">Your Benefits</a>
+                    <a href="pages/ecommerce.html">E-Commerce Integration</a>
+                    <a href="pages/operation.html">Getting Started</a>
+                    <a href="pages/faq.html">FAQ</a>
+                    <a href="pages/disclaimer.html">Disclaimer</a>
                 </div>
             </div>
             <p class="copyright">
-                Bespoke Web Dev © 2023. All rights reserved.
+                <span>Bespoke Web Dev © <span id="copyright"></span>. All rights reserved.</span>
                 <span>ABN: 43 464 545 840</span>
             </p>
         </footer>
-        <script src="canvas.js"></script>
-        <script src="main.js"></script>
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="assets/canvas.js"></script>
+        <script src="assets/main.js"></script>
+        <script defer type="text/javascript">
+            ;(function (c, l, a, r, i, t, y) {
+                c[a] =
+                    c[a] ||
+                    function () {
+                        ;(c[a].q = c[a].q || []).push(arguments)
+                    }
+                t = l.createElement(r)
+                t.async = 1
+                t.src = "https://www.clarity.ms/tag/" + i
+                y = l.getElementsByTagName(r)[0]
+                y.parentNode.insertBefore(t, y)
+            })(window, document, "clarity", "script", "haebr2ebra")
+        </script>
     </body>
 </html>
