--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             defer
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,500,0,0"
         />
+        <link rel="stylesheet" href="assets/packages/swiper-bundle.min.css" />
         <meta property="og:title" content="Bespoke Web Design & Development Adelaide" />
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://bespokewebdev.com/" />
@@ -163,13 +164,16 @@
             </div>
         </section>
 
-        <section id="clientele" style="max-width: 100vw;">
+        <section style="padding: 0;" id="clientele">
             <h1 class="title">
                 Our Most Recent Clients
             </h1>
-            <div class="banner-container">
-                <div class="banner"></div>
-                <div class="progress-container"></div>
+
+            <div class="swiper">
+                <div class="swiper-wrapper"></div>
+                <div class="swiper-button-prev"></div>
+                <div class="swiper-button-next"></div>
+                <div class="swiper-scrollbar"></div>
             </div>
         </section>
 
@@ -359,7 +363,8 @@
                 <span>ABN: 43 464 545 840</span>
             </p>
         </footer>
-        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="assets/packages/swiper-bundle.min.js"></script>
+        <script src="assets/packages/axios.min.js"></script>
         <script src="assets/canvas.js"></script>
         <script src="assets/main.js"></script>
         <script defer type="text/javascript">
