--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Bespoke Web Design & Development Adelaide</title>
+        <title>Bespoke Web Design & Development Adelaide | Bespoke Web Dev</title>
         <meta name="author" content="Cohen Coombs" />
         <link rel="shortcut icon" href="assets/logo.png" type="image/x-icon" />
         <link rel="stylesheet" href="assets/style.css" />
@@ -89,7 +89,7 @@
                     </div>
                     <p>
                         All websites are hand-coded from scratch, offering a
-                        <a style="font-weight: 600;" href="pages/benefits.html"
+                        <a style="font-weight: 600; display: inline;" href="pages/benefits.html"
                             >range of benefits - click to learn more.</a
                         >
                         We strive to deliver modern, high-quality and reliable websites that help
@@ -348,6 +348,54 @@
                 >
                     cohencoombs@outlook.com
                 </a>
+
+                <div class="socials">
+                    <a
+                        class="social"
+                        target="_blank"
+                        href="https://www.facebook.com/profile.php?id=100093077884327"
+                    >
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1.8"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                        >
+                            <path
+                                d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
+                            ></path>
+                        </svg>
+                    </a>
+                    <a
+                        class="social"
+                        target="_blank"
+                        href="https://www.linkedin.com/company/bespokewebdev"
+                    >
+                        <svg
+                            xmlns="http://www.w3.org/2000/svg"
+                            width="24"
+                            height="24"
+                            viewBox="0 0 24 24"
+                            fill="none"
+                            stroke="currentColor"
+                            stroke-width="1.8"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                        >
+                            <path
+                                d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
+                            ></path>
+                            <rect x="2" y="9" width="4" height="12"></rect>
+                            <circle cx="4" cy="4" r="2"></circle>
+                        </svg>
+                    </a>
+                </div>
+
                 <hr />
                 <div class="links">
                     <a href="pages/services.html">Our Services</a>
