--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
             </div>
         </section>
 
-        <section style="padding: 0;" id="clientele">
+        <section style="padding: 0 5%;" id="clientele">
             <h1 class="title">
                 Our Most Recent Clients
             </h1>
