--- a/email.html
+++ b/email.html
@@ -12,10 +12,34 @@
                 font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
                     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
                 background: #222;
+                color: white;
             }
             .container {
                 max-width: 800px;
                 margin: 4rem auto;
+            }
+            .flex {
+                display: flex;
+                justify-content: space-between;
+                gap: 8px;
+                align-items: center;
+                margin: 2rem 0;
+            }
+            label {
+                font-size: 1.2rem;
+                color: #999;
+            }
+            hr {
+                border: 1px solid #333;
+                margin: 2rem 0;
+            }
+            a {
+                text-decoration: none;
+                color: #fbcd00;
+                font-size: 1.2rem;
+            }
+            a:hover {
+                text-decoration: underline;
             }
             input,
             textarea,
@@ -24,7 +48,7 @@
                 background: transparent;
                 border-radius: 10px;
                 border: 1px solid #333;
-                padding: 14px 2rem;
+                padding: 10px;
                 margin: 8px 0;
                 outline: 0;
                 color: white;
@@ -35,15 +59,41 @@
     </head>
     <body>
         <div class="container">
-            <input type="text" id="name" placeholder="Person/Business Name" />
-            <input type="text" id="services" placeholder="Services Offered" />
-            <select name="typeof" id="typeof">
-                <option value="sell">Selling</option>
-                <option value="offer">Offering</option>
-                <option value="run">Running</option>
-            </select>
+            <h1>Email template generator</h1>
+
+            <input type="text" id="to" placeholder="To: @mail.com" />
+            <input
+                type="text"
+                id="subject"
+                placeholder="Subject"
+                value="Stand Tall in the Digital Landscape"
+            />
+
+            <hr />
+
+            <div class="flex">
+                <label style="color: lime; font-weight: 600;" for="name">Hello, </label>
+                <input type="text" id="name" placeholder="Person/Business Name" />
+            </div>
+
+            <label style="color: aqua; font-weight: 500;" for="services"
+                >...saw your dedication to providing
+            </label>
+            <input
+                type="text"
+                name="services"
+                id="services"
+                placeholder="the best maintenance services here / locals with amazing quality produce here"
+            />
+
+            <div class="flex">
+                <label style="color: orange; font-weight: 600;" for="where">...in </label>
+                <input type="text" name="where" id="where" placeholder="Service Areas" />
+            </div>
+
+            <a id="send" href=""></a>
             <br />
-            <textarea name="text" id="output" rows="22"></textarea>
+            <textarea placeholder="Generated Output" id="output" rows="28"></textarea>
         </div>
 
         <script>
@@ -51,23 +101,35 @@
                 const name = document.getElementById("name")
                 const output = document.getElementById("output")
                 const services = document.getElementById("services")
-                const servicesType = document.getElementById("typeof")
+                const where = document.getElementById("where")
+
+                const to = document.getElementById("to")
+                const subject = document.getElementById("subject")
 
                 if (name.value) {
                     output.value = `Hello ${name.value},
 
-I came across your Facebook page and saw the amazing ${services.value} you ${servicesType.value}. However, I noticed that you haven't yet capitalised on the power of having a professionally designed website to truly enhance your online presence.
+I came across your Facebook page and saw your dedication to providing ${services.value} in ${where.value}.
 
-I'm a passionate web developer based locally in Adelaide specialising in creating bespoke, hand-coded websites that are tailored to fit each business's unique needs. I'd love the opportunity to work with you and craft a tailor-made website that represents your business, reaches a wider audience, and unlocks its full potential.
+However, I noticed that you haven't yet capitalised on a professionally designed website to truly enhance your online presence.
 
-By working together, we'll ensure that your website is not only customised for your specific needs but also optimised for performance, mobile-friendly, and reliable. Plus, I offer dedicated support and maintenance, along with complimentary website hosting and SSL certificates.
+I'm a passionate website design & developer based locally here in Adelaide specialising in creating bespoke, hand-coded websites tailored to fit each business's unique needs.
 
-To learn more about my services & portfolio work, please visit https://bespokewebdev.com. I'm genuinely excited to connect with you and explore how crafting a personalised website can contribute to your success.
+I’ve contacted you as I’d love the opportunity to collaborate with you and craft a tailor-made website that represents your business, reaches a wider audience, unlocks its full potential, while being optimised for performance, mobile-friendly, and reliable.
 
-Looking forward to hearing from you soon! Let's uplift your online presence together.
+If you’d like to learn more about my services & portfolio work, you can find our business “Bespoke Web Dev” on Google or by visiting bespokewebdev.com. I'm genuinely excited to connect with you to grow your online presence.
+
+Looking forward to hearing from you soon and improving your online presence.
 
 Yours Sincerely,
 Cohen Coombs – Bespoke Web Dev`
+                }
+
+                if (name.value && services.value && where.value && to.value && subject.value) {
+                    document.getElementById(
+                        "send"
+                    ).href = `mailto:${to.value}?subject=${subject.value}`
+                    document.getElementById("send").innerHTML = `Send to ${to.value} via email`
                 }
             }, 1000)
         </script>
