--- a/pages/thanks.html
+++ b/pages/thanks.html
@@ -9,6 +9,32 @@
         <link rel="shortcut icon" href="../assets/logo.png" type="image/x-icon" />
         <link rel="stylesheet" href="../assets/style.css" />
         <link rel="stylesheet" href="assets/pages.css" />
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "LocalBusiness",
+                "name": "Bespoke Web Design & Development Adelaide",
+                "description": "Unlock your online potential with a jaw-dropping bespoke web presence that turns heads & drives popularity.",
+                "url": "https://bespokewebdev.com",
+                "logo": "https://bespokewebdev.com/assets/logo.png",
+                "contactPoint": {
+                    "@type": "ContactPoint",
+                    "telephone": "+61 405 495 145",
+                    "contactType": "Customer support"
+                },
+                "openingHours": "Mo-Su 08:00-18:00",
+                "sameAs": [
+                    "https://www.facebook.com/profile.php?id=100093077884327",
+                    "https://www.instagram.com/bespokewebdev",
+                    "https://www.linkedin.com/company/bespokewebdev"
+                ],
+                "aggregateRating": {
+                    "@type": "AggregateRating",
+                    "ratingValue": "5.0",
+                    "reviewCount": "10"
+                }
+            }
+        </script>
         <link
             rel="stylesheet"
             defer
