SEO/articles improvements

--- a/index.html
+++ b/index.html
@@ -252,14 +252,12 @@
                         src="assets/mock-mac.png"
                         style="display: block;"
                         class="mock-mac"
-                        loading="lazy"
                         alt="Example of a website on a computer"
                     />
                     <img
                         src="assets/mock-phone.png"
                         style="display: none;"
                         class="mock-phone"
-                        loading="lazy"
                         alt="Example of a website on a phone"
                     />
                 </div>
@@ -459,12 +457,14 @@
 
                 <hr />
                 <div class="links">
+                    <a href="pages/from-sales-to-leads.html">From Sales to Leads</a>
                     <a href="pages/services.html">Our Services</a>
                     <a href="pages/benefits.html">Your Benefits</a>
                     <a href="pages/ecommerce.html">E-Commerce Integration</a>
                     <a href="pages/operation.html">Getting Started</a>
                     <a href="pages/faq.html">FAQ</a>
                     <a href="pages/disclaimer.html">Disclaimer</a>
+                    <a href="sitemap.html">Sitemap</a>
                 </div>
             </div>
             <p class="copyright">
@@ -472,9 +472,9 @@
                 <span>ABN: 43 464 545 840</span>
             </p>
         </footer>
+        <script src="assets/canvas.js"></script>
         <script async src="assets/packages/axios.min.js"></script>
         <script async src="assets/packages/swiper-bundle.min.js"></script>
-        <script src="assets/canvas.js"></script>
         <script async src="assets/main.js"></script>
         <script defer async type="text/javascript">
             ;(function (c, l, a, r, i, t, y) {
