Article pages fix

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
                 <hr />
                 <div class="links">
-                    <a href="pages/from-sales-to-leads.html">From Sales to Leads</a>
+                    <a href="pages/from-leads-to-sales.html">From Leads to Sales</a>
                     <a href="pages/services.html">Our Services</a>
                     <a href="pages/benefits.html">Your Benefits</a>
                     <a href="pages/ecommerce.html">E-Commerce Integration</a>
