--- a/pages/from-leads-to-sales.html
+++ b/pages/from-leads-to-sales.html
@@ -1,5 +1,5 @@
 <!--  
-  from-sales-to-leads.html is an auto-generated file. THERE IS NO NEED TO EDIT THIS FILE.
+  from-leads-to-sales.html is an auto-generated file. THERE IS NO NEED TO EDIT THIS FILE.
   Run the '!generate-pages' script to generate these article files.
   Add new article files to the 'articles' array in the '!generate-pages' script.
 -->
